--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -8,7 +8,7 @@
         <th>Launch Date</th>
     </tr>
     <!-- TODO: put <tr *ngFor=""></tr> here -->
-    <tr *ngFor="let satellite of satellites" [class.warning]="satellite.shouldShowWarning()">
+    <tr *ngFor="let satellite of satellites" [class.even-row]="satellites.indexOf(satellite) % 2 === 0" [class.odd-row]="satellites.indexOf(satellite) % 2 === 1" [class.warning]="satellite.shouldShowWarning()">
         <td>{{satellite.name}}</td>
         <td >{{satellite.type}}</td>
         <td>{{satellite.operational}}</td>
